# KLTN_v1

./: .env  .gitignore  add_hasura_datasource.sql  config.yaml  docker-compose.yml  pyproject.toml
crawl/: crawl_and_import.py  (+5 more)
libs/lite_llm/: pyproject.toml
libs/lite_llm/src/lite_llm/: __init__.py  datatypes.py  service.py  services.py  settings.py
pg/: README.md  pyproject.toml
pg/migrations/: env.py
pg/migrations/versions/: 636cde55537b_init_db.py  6402eec131e8_add_authentication_table.py  804d62a26efd_add_additional_info_to_message_table.py  883d0a661ca4_add_type_recommend_to_recommend_items.py  cd17e5bf74a3_add_is_confirm_in_conversation_table.py  cfbdfc083d01_add_text2sql_tables.py  de6fc8efca25_add_summarize_for_conversation_table.py
pg/src/pg/: __init__.py  models.py  schema.py  settings.py  sql_database.py
pg/src/pg/controller/: __init__.py  address.py  brand.py  cart.py  cart_item.py  category.py  city.py  conversation.py  group.py  human_activity.py  inventory.py  message.py  order.py  order_item.py  payment.py  policy_rule.py  product.py  product_category.py  product_variant.py  recommend_items.py  repository.py  review.py  user.py  user_attribute.py  user_authentication.py  utils.py  variant_inventory.py
pg/src/test/: test_postgres.py  test_user_authentication.py
services/aqi_agent/: pyproject.toml  requirements.txt
services/aqi_agent/src/aqi_agent/: __init__.py  app.py  main.py  settings.yaml
services/aqi_agent/src/aqi_agent/api/: __init__.py  dependencies.py  routes.py
services/aqi_agent/src/aqi_agent/api/helpers/: exception_handler.py  middlewares.py
services/aqi_agent/src/aqi_agent/api/routers/: manager.py
services/aqi_agent/src/aqi_agent/api/routers/v1/: __init__.py  aqi_agent.py
services/aqi_agent/src/aqi_agent/application/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/answer_generator/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/answer_generator/prompts/: __init__.py  answer_generator.py
services/aqi_agent/src/aqi_agent/domain/aqi_text2graphql/: __init__.py
services/aqi_agent/src/aqi_agent/domain/aqi_text2graphql/nlg/: __init__.py
services/aqi_agent/src/aqi_agent/domain/aqi_text2graphql/planning/: __init__.py  prompts.py  service.py
services/aqi_agent/src/aqi_agent/domain/aqi_text2graphql/sub_agent/: __init__.py  service.py  state.py
services/aqi_agent/src/aqi_agent/domain/autocorrector/: __init__.py  fuzzy_corrector.py  models.py  service.py
services/aqi_agent/src/aqi_agent/domain/example_management/: __init__.py  models.py  service.py
services/aqi_agent/src/aqi_agent/domain/fixsql_agent/: __init__.py  models.py  service.py
services/aqi_agent/src/aqi_agent/domain/fixsql_agent/prompts/: __init__.py  prompt.py
services/aqi_agent/src/aqi_agent/domain/graphql_generation/: __init__.py  condition_selection.py  execution.py  field_selection.py  query_builder.py
services/aqi_agent/src/aqi_agent/domain/history_retrieval/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/human_intervent/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/human_intervent/prompts/: __init__.py  human_intervent.py
services/aqi_agent/src/aqi_agent/domain/interrupt_checker/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/memory_updater/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/nlg/: __init__.py  prompts.py  service.py
services/aqi_agent/src/aqi_agent/domain/planner/: __init__.py  models.py  service.py
services/aqi_agent/src/aqi_agent/domain/planning/: prompts.py
services/aqi_agent/src/aqi_agent/domain/rephrase_question/: service.py
services/aqi_agent/src/aqi_agent/domain/sql_execution/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/sql_execution_handler/: service.py
services/aqi_agent/src/aqi_agent/domain/sql_generation/: __init__.py  prompts.py  service.py
services/aqi_agent/src/aqi_agent/domain/sql_generator/: __init__.py  base.py
services/aqi_agent/src/aqi_agent/domain/sql_validator/: service.py
services/aqi_agent/src/aqi_agent/domain/table_pruner/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/text2graphql_planning/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/domain/text2graphql_sub_agent/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/infra/hasura/: __init__.py  service.py
services/aqi_agent/src/aqi_agent/shared/: __init__.py  state.py  utils.py
services/aqi_agent/src/aqi_agent/shared/exception/: __init__.py  base.py  exceptions.py
services/aqi_agent/src/aqi_agent/shared/model/: __init__.py  models.py  planning.py  schemas.py  text2sql_models.py
services/aqi_agent/src/aqi_agent/shared/models/: __init__.py  example.py  memory.py  state.py  task.py
services/aqi_agent/src/aqi_agent/shared/settings/: __init__.py  answer_generator.py  autocorrector.py  example_management.py  fixsql_agent.py  history_retrieval.py  human_intervent.py  memory_updater.py  planner.py  redis.py  rephrase_question.py  settings.py  sql_execution.py  sql_generator.py  table_pruner.py
services/aqi_agent/src/aqi_agent/shared/tools/: __init__.py  python_executor.py
(+113 files in other folders)
