[project]
name = "kltn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "base",
    "easydict>=1.13",
    "langchain>=1.2.4",
    "lite-llm",
    "logger",
]

[tool.uv.workspace]
members = [
    "libs/pg",
    "libs/base",
    "libs/lite_llm",
    "libs/logger",
    "services/aqi_agent",
]

[tool.uv.sources]
lite-llm = { workspace = true }
logger = { workspace = true }
base = { workspace = true }
