[project]
name = "kltn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "aqi-agent",
    "base",
    "easydict>=1.13",
    "fastapi>=0.128.0",
    "langchain>=1.2.4",
    "lite-llm",
    "logger",
    "opensearch",
    "pg",
    "typing-extensions>=4.15.0",
]

[tool.uv.workspace]
members = [
    "libs/pg",
    "libs/base",
    "libs/lite_llm",
    "libs/logger",
    "services/aqi_agent",
    "libs/opensearch",
]

[tool.uv.sources]
base = { workspace = true }
opensearch = { workspace = true }
pg = { workspace = true }
aqi-agent = { workspace = true }
lite-llm = { workspace = true }
logger = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
pythonpath = [
    "services/aqi_agent/src",
    "libs/base/src",
    "libs/lite_llm/src",
    "libs/logger/src",
    "libs/pg/src",
    "libs/opensearch/src",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
