[project]
name = "pg"
version = "1.0"
description = "SQL Database integration module providing robust and efficient connectivity to PostgreSQL databases for Python applications."
readme = "README.md"
authors = [
    { name = "kientt-3694", email = "tran.trung.kien@sun-asterisk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "base",
    "dotenv==0.9.9",
    "psycopg==3.2.3",
    "psycopg2-binary==2.9.9",
    "pydantic==2.11.7",
    "sqlalchemy==2.0.35",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
base = { workspace = true }
