[project]
name = "aqi-agent"
version = "1.0.0"
description = "Air Quality Index question answering service using Text2GraphQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "base",
    "lite-llm",
    "logger",
    "pg",
    "streamlit>=1.53.0",
    "requests>=2.32.5",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqi_agent"]

[tool.uv.sources]
base = { workspace = true }
lite-llm = { workspace = true }
logger = { workspace = true }
pg = { workspace = true }

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
